// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a BookResults component When it is rendered And book results are loading searching by isbn Then should match the snapshot 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#F5F5F5",
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "left": 20,
        "opacity": 1,
        "position": "absolute",
        "top": 20,
        "zIndex": 1,
      }
    }
    testID="backButton"
  >
    <IconMock
      height={30}
      style={
        Object {
          "transform": Array [
            Object {
              "rotateZ": "180deg",
            },
          ],
        }
      }
      width={30}
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "backgroundColor": "#F5F5F5",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#D9D8C4",
          "borderBottomLeftRadius": 25,
          "justifyContent": "center",
          "padding": 10,
          "width": "100%",
        }
      }
    >
      <IconMock
        height={45}
        width={45}
      />
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#D9D8C4",
            "height": 20,
            "width": 20,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderTopRightRadius": 25,
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#3E3C37",
            "fontSize": 12,
            "paddingHorizontal": 5,
          }
        }
      >
        ISBN: 1
      </Text>
      <Text
        style={
          Object {
            "color": "#3E3C37",
            "fontSize": 12,
            "paddingHorizontal": 5,
          }
        }
      >
        
      </Text>
      <Text
        style={
          Object {
            "color": "#3E3C37",
            "fontSize": 12,
            "paddingHorizontal": 5,
          }
        }
      >
        
      </Text>
      <Text
        style={
          Object {
            "color": "#3E3C37",
            "fontSize": 12,
            "paddingHorizontal": 5,
          }
        }
      >
        
      </Text>
    </View>
    <ActivityIndicator
      color="#000000"
      size="large"
    />
    <View
      style={
        Object {
          "height": 130,
          "width": "100%",
        }
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`Given a BookResults component When it is rendered And there are book results searching by author, title and publisher Then should match the snapshot 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#F5F5F5",
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "left": 20,
        "opacity": 1,
        "position": "absolute",
        "top": 20,
        "zIndex": 1,
      }
    }
    testID="backButton"
  >
    <IconMock
      height={30}
      style={
        Object {
          "transform": Array [
            Object {
              "rotateZ": "180deg",
            },
          ],
        }
      }
      width={30}
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "backgroundColor": "#F5F5F5",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#D9D8C4",
          "borderBottomLeftRadius": 25,
          "justifyContent": "center",
          "padding": 10,
          "width": "100%",
        }
      }
    >
      <IconMock
        height={45}
        width={45}
      />
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#D9D8C4",
            "height": 20,
            "width": 20,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderTopRightRadius": 25,
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#3E3C37",
            "fontSize": 12,
            "paddingHorizontal": 5,
          }
        }
      >
        
      </Text>
      <Text
        style={
          Object {
            "color": "#3E3C37",
            "fontSize": 12,
            "paddingHorizontal": 5,
          }
        }
      >
        Title: TITLE
      </Text>
      <Text
        style={
          Object {
            "color": "#3E3C37",
            "fontSize": 12,
            "paddingHorizontal": 5,
          }
        }
      >
        Author: AUTHOR
      </Text>
      <Text
        style={
          Object {
            "color": "#3E3C37",
            "fontSize": 12,
            "paddingHorizontal": 5,
          }
        }
      >
        Publisher: PUBLISHER
      </Text>
    </View>
    <RCTScrollView
      data={
        Array [
          Object {
            "authors": Array [
              "George Orwell",
            ],
            "categories": Array [
              "London (England)",
            ],
            "description": "Winston Smith is a worker at the Ministry of Truth, where he falsifies records for the party. Secretly subversive, he and his colleague Julia try to free themselves from political slavery but the price of freedom is betrayal.",
            "format": "BOOK",
            "images": Object {
              "smallThumbnail": "smallThumbnail1",
              "thumbnail": "thumbnail1",
            },
            "isbn": Object {
              "ISBN10": "0451524934",
              "ISBN13": "9780451524935",
            },
            "language": "en",
            "pageCount": 190,
            "publishedDate": "2009",
            "publisher": "No publisher found",
            "subtitle": "A Novel",
            "title": "1984",
          },
          Object {
            "authors": Array [
              "George Orwell",
              "Another author",
              "Last author",
            ],
            "categories": Array [
              "London (England)",
              "Fiction",
              "Another",
            ],
            "description": "Winston Smith is a worker at the Ministry of Truth, where he falsifies records for the party. Secretly subversive, he and his colleague Julia try to free themselves from political slavery but the price of freedom is betrayal.",
            "format": "BOOK",
            "images": Object {
              "smallThumbnail": "smallThumbnail2",
            },
            "isbn": Object {
              "ISBN10": "0451524934",
              "ISBN13": "9780451524935",
            },
            "language": "en",
            "pageCount": 190,
            "publishedDate": "2009",
            "publisher": "No publisher found",
            "subtitle": "A Novel",
            "title": "1984",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      showsVerticalScrollIndicator={false}
      stickyHeaderIndices={Array []}
      viewabilityConfigCallbackPairs={Array []}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginVertical": 10,
                "opacity": 1,
              }
            }
            testID="bookDetailButton"
          >
            <Image
              source={
                Object {
                  "uri": "thumbnail1",
                }
              }
              style={
                Object {
                  "borderBottomLeftRadius": 10,
                  "borderTopLeftRadius": 10,
                  "height": 200,
                  "overflow": "hidden",
                  "width": 125,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomRightRadius": 10,
                  "borderTopRightRadius": 10,
                  "height": 175,
                  "justifyContent": "space-between",
                  "padding": 10,
                  "width": 210,
                }
              }
            >
              <View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "maxHeight": 75,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "fontSize": 16,
                        "fontWeight": "bold",
                        "width": 175,
                      }
                    }
                  >
                    1984
                  </Text>
                  <Text>
                    EN
                  </Text>
                </View>
                <Text
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                  George Orwell
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#3E3C37",
                      "fontSize": 12,
                    }
                  }
                >
                  No publisher found
                </Text>
              </View>
              <View>
                <Text
                  style={
                    Object {
                      "color": "#3E3C37",
                      "fontSize": 12,
                    }
                  }
                >
                  ISBN13 -
                   
                  9780451524935
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#3E3C37",
                      "fontSize": 12,
                    }
                  }
                >
                  ISBN10 -
                   
                  0451524934
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginVertical": 10,
                "opacity": 1,
              }
            }
            testID="bookDetailButton"
          >
            <Image
              source={
                Object {
                  "uri": "smallThumbnail2",
                }
              }
              style={
                Object {
                  "borderBottomLeftRadius": 10,
                  "borderTopLeftRadius": 10,
                  "height": 200,
                  "overflow": "hidden",
                  "width": 125,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomRightRadius": 10,
                  "borderTopRightRadius": 10,
                  "height": 175,
                  "justifyContent": "space-between",
                  "padding": 10,
                  "width": 210,
                }
              }
            >
              <View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "maxHeight": 75,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "fontSize": 16,
                        "fontWeight": "bold",
                        "width": 175,
                      }
                    }
                  >
                    1984
                  </Text>
                  <Text>
                    EN
                  </Text>
                </View>
                <Text
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                  George Orwell
                </Text>
                <Text
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                  Another author
                </Text>
                <Text
                  style={
                    Object {
                      "fontSize": 12,
                    }
                  }
                >
                  ...
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#3E3C37",
                      "fontSize": 12,
                    }
                  }
                >
                  No publisher found
                </Text>
              </View>
              <View>
                <Text
                  style={
                    Object {
                      "color": "#3E3C37",
                      "fontSize": 12,
                    }
                  }
                >
                  ISBN13 -
                   
                  9780451524935
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#3E3C37",
                      "fontSize": 12,
                    }
                  }
                >
                  ISBN10 -
                   
                  0451524934
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Object {
          "height": 130,
          "width": "100%",
        }
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`Given a BookResults component When it is rendered And there are no book results searching by author and publisher Then should match the snapshot 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#F5F5F5",
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "left": 20,
        "opacity": 1,
        "position": "absolute",
        "top": 20,
        "zIndex": 1,
      }
    }
    testID="backButton"
  >
    <IconMock
      height={30}
      style={
        Object {
          "transform": Array [
            Object {
              "rotateZ": "180deg",
            },
          ],
        }
      }
      width={30}
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "backgroundColor": "#F5F5F5",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#D9D8C4",
          "borderBottomLeftRadius": 25,
          "justifyContent": "center",
          "padding": 10,
          "width": "100%",
        }
      }
    >
      <IconMock
        height={45}
        width={45}
      />
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#D9D8C4",
            "height": 20,
            "width": 20,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderTopRightRadius": 25,
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#3E3C37",
            "fontSize": 12,
            "paddingHorizontal": 5,
          }
        }
      >
        
      </Text>
      <Text
        style={
          Object {
            "color": "#3E3C37",
            "fontSize": 12,
            "paddingHorizontal": 5,
          }
        }
      >
        
      </Text>
      <Text
        style={
          Object {
            "color": "#3E3C37",
            "fontSize": 12,
            "paddingHorizontal": 5,
          }
        }
      >
        Author: AUTHOR
      </Text>
      <Text
        style={
          Object {
            "color": "#3E3C37",
            "fontSize": 12,
            "paddingHorizontal": 5,
          }
        }
      >
        Publisher: PUBLISHER
      </Text>
    </View>
    <Text>
      0 results
    </Text>
    <View
      style={
        Object {
          "height": 130,
          "width": "100%",
        }
      }
    />
  </View>
</RCTSafeAreaView>
`;
